[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/objects/levels/bits/1/boss/filing.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 64 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[node name="Filing" type="Node2D"]
script = ExtResource( 2 )

[node name="BodyArea" type="Area2D" parent="."]

[node name="BodyCollider" type="CollisionShape2D" parent="BodyArea"]
position = Vector2( 0, -64 )
shape = SubResource( 1 )

[node name="BodySprite" type="Sprite" parent="BodyArea"]
position = Vector2( 0, -64 )
scale = Vector2( 1, 2 )
texture = ExtResource( 1 )

[node name="DrawerArea" type="Area2D" parent="."]

[node name="DrawerCollider" type="CollisionShape2D" parent="DrawerArea"]
position = Vector2( 0, -96 )
shape = SubResource( 2 )

[node name="DrawerSprite" type="Sprite" parent="DrawerArea"]
position = Vector2( 0, -96 )
texture = ExtResource( 1 )

[node name="HeightTrigger" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="EndOfAttack" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="body_entered" from="BodyArea" to="." method="_on_BodyArea_body_entered"]
[connection signal="body_entered" from="DrawerArea" to="." method="_on_DrawerArea_body_entered"]
[connection signal="timeout" from="HeightTrigger" to="." method="_on_HeightTrigger_timeout"]
[connection signal="timeout" from="EndOfAttack" to="." method="_on_EndOfAttack_timeout"]
